Closed Bug 1935105 Opened 2 months ago Closed 2 months ago

Perma /builds/worker/checkouts/gecko/js/src/frontend/Parser.cpp:1438:48: error: no member named 'Using' in 'js::BindingKind' when Gecko 135 merges to beta on 2025-01-06

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

VERIFIED FIXED
135 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox133 --- unaffected
firefox134 --- unaffected
firefox135 + verified

People

(Reporter: agoloman, Assigned: debadree333)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central-as-beta-simulation

How to run these simulations

Failure log

Failure snippet

[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -                 '"public/build/sysroot-i686-linux-gnu.tar.zst", "extract": '
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -                 'true, "task": "NPt86eQkToSnEjiIuOEWQQ"}, {"artifact": '
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -                 '"public/build/sysroot-wasm32-wasi.tar.zst", "extract": true, '
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -                 '"task": "SdaCmH60RR-ctP1kUQBfNQ"}, {"artifact": '
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -                 '"public/build/sysroot-x86_64-linux-gnu.tar.zst", "extract": '
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -                 'true, "task": "Q88ygvvYRoORetLojlMCOQ"}]',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'MOZ_FETCHES_DIR': '/builds/worker/fetches',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'MOZ_OBJDIR': '/builds/worker/workspace/obj-build',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'MOZ_PYTHON_HOME': '/builds/worker/fetches/python',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'MOZ_SCM_LEVEL': '1',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'MOZ_SIMPLE_PACKAGE_NAME': 'target',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'MOZ_SOURCE_CHANGESET': '4a9a25e6c2b1753cff6527e4d20404c86ed61fcd',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'MOZ_SOURCE_REPO': 'https://hg.mozilla.org/try',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'OLDPWD': '/builds/worker',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'PATH': '/usr/local/bin:/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/sbin:',
[task 2024-12-04T10:47:50.145Z] 10:47:50     INFO -  'PWD': '/builds/worker',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'PYTHONDONTWRITEBYTECODE': '1',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'PYTHONUNBUFFERED': '1',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'REQUIRE_GPU': '0',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'RUN_ID': '0',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'SCCACHE_GCS_PROJECT': 'sccache-3',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'SCCACHE_IDLE_TIMEOUT': '0',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'SHELL': '/bin/bash',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'SHLVL': '1',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_INSTANCE_TYPE': 'projects/887720501152/machineTypes/c2-standard-16',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_NAME': '/trusting_lehmann/taskcluster',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_PORT': 'tcp://172.17.0.2:80',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_PORT_80_TCP': 'tcp://172.17.0.2:80',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_PORT_80_TCP_ADDR': '172.17.0.2',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_PORT_80_TCP_PORT': '80',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_PORT_80_TCP_PROTO': 'tcp',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_PROXY_URL': 'http://taskcluster',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_PUBLIC_IP': '34.82.168.183',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_ROOT_URL': 'https://firefox-ci-tc.services.mozilla.com',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_WORKER_GROUP': 'us-west1-b',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_WORKER_LOCATION': '{"cloud":"google","region":"us-west1","zone":"us-west1-b"}',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_WORKER_POOL': 'gecko-1/b-linux-gcp',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASKCLUSTER_WORKER_TYPE': 'b-linux-gcp',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TASK_ID': 'PmSlbUz9QxCGBurRtkDZQg',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TERM': 'xterm',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TINDERBOX_OUTPUT': '1',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TOOLTOOL_CACHE': '/builds/worker/tooltool-cache',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'TRY_COMMIT_MSG': '',
[task 2024-12-04T10:47:50.146Z] 10:47:50     INFO -  'UPLOAD_DIR': '/builds/worker/artifacts',
[task 2024-12-04T10:47:50.147Z] 10:47:50     INFO -  'USER': 'worker',
[task 2024-12-04T10:47:50.147Z] 10:47:50     INFO -  'USE_SCCACHE': '1',
[task 2024-12-04T10:47:50.147Z] 10:47:50     INFO -  'VIRTUAL_ENV': '/builds/worker/.mozbuild/srcdirs/gecko-8a5b87fe5d69/_virtualenvs/common',
[task 2024-12-04T10:47:50.147Z] 10:47:50     INFO -  'WORKSPACE': '/builds/worker/workspace',
[task 2024-12-04T10:47:50.147Z] 10:47:50     INFO -  'XPCOM_DEBUG_BREAK': 'stack-and-abort',
[task 2024-12-04T10:47:50.147Z] 10:47:50     INFO -  'XZ_OPT': '-T0',
[task 2024-12-04T10:47:50.147Z] 10:47:50     INFO -  '_': '/builds/worker/checkouts/gecko/mach'}
[task 2024-12-04T10:47:51.191Z] 10:47:51     INFO - Return code: 0
[task 2024-12-04T10:47:51.191Z] 10:47:51     INFO - Running post-run listener: _relocate_artifacts
[task 2024-12-04T10:47:51.194Z] 10:47:51     INFO - The artifact /builds/worker/artifacts/target.crashreporter-symbols-full.tar.zst is not present in this build. Skipping
[task 2024-12-04T10:47:51.194Z] 10:47:51     INFO - Successfully moved artifact /builds/worker/artifacts/sccache.log to /builds/worker/cidata/sccache.log
[task 2024-12-04T10:47:51.194Z] 10:47:51     INFO - Successfully moved artifact /builds/worker/artifacts/sccache-stats.json to /builds/worker/cidata/sccache-stats.json
[task 2024-12-04T10:47:51.194Z] 10:47:51     INFO - Running post-run listener: _summarize
[task 2024-12-04T10:47:51.194Z] 10:47:51     INFO - [mozharness: 2024-12-04 10:47:51.194512Z] FxDesktopBuild summary:
[taskcluster 2024-12-04 10:47:53.319Z] === Task Finished ===
[taskcluster 2024-12-04 10:47:53.336Z] Artifact "public/cidata/target.crashreporter-symbols-full.tar.zst" not found at "/builds/worker/cidata/target.crashreporter-symbols-full.tar.zst": (HTTP code 404) no such container - Could not find the file /builds/worker/cidata/target.crashreporter-symbols-full.tar.zst in container 7d5c47bfd4a9fd6852c8f90bc4c4e8a7cabcc6d795100c561df3fa65c23d0576 
[taskcluster 2024-12-04 10:47:54.451Z] Unsuccessful task run with exit code: 255 completed in 2218.145 seconds

Flags: needinfo?(debadree333)

Patch to fix submitted!

Flags: needinfo?(debadree333)
Pushed by arai_a@mac.com: https://hg.mozilla.org/integration/autoland/rev/5d395b53168f Wrap binding kind assert with compile time flag. r=arai
Status: NEW → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch

This is verified fixed as seen in this central as beta simulation

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: