Bug 1935105 - Wrap binding kind assert with compile time flag. r=arai

Differential Revision: https://phabricator.services.mozilla.com/D231078